refactor: Add Image crud to swagger documentation
